# spt_act_likelihood

./: README.md  aps.yaml  aps_theta_prior.yaml  cobaya.sh  cpower_mnu_3.yaml  data.txt  mnu_sn.yaml  mnu_update_prior.yaml  model_total.txt  p-act-desiy3-camb-mnu.yaml  p-act-desiy3-camb-mnu_tau_free.yaml  power_law.py  pyproject.toml  spt_test_kk.yaml  uber_kk.yaml  uber_kk_wide_alpha.yaml
act_dr6_spt_lenslike/: Omega_mh3.py  __init__.py  act_dr6_lenslike.py  act_dr6_spt_lenslike.py
act_dr6_spt_lenslike/data/v1.2/: README  binning_matrix_planck.txt  clkk_bandpowers_act_cibdeproj.txt  clkk_bandpowers_act_cinpaint.txt  clkk_bandpowers_act_polonly.txt  clkk_bandpowers_planck.txt  covmat_act_cibdeproj_cmbmarg.txt  covmat_act_cmbmarg.txt  covmat_act_polonly.txt  covmat_act_polonly_cmbmarg.txt  covmat_actplanck.txt  covmat_actplanck_cmbmarg.txt  covmat_actplanckspt3g_analytic_offdiagonal.txt  covmat_actplanckspt3g_analytic_offdiagonal_no_cmbmarg.txt  covmat_actspt3g.txt  covmat_actspt3g_no_cmbmarg.txt  muse_likelihood.npz
act_dr6_spt_lenslike/tests/: test_act.py  test_cobaya.py
notebooks/: uber_bandpowers.ipynb
