[project]
name = "act_dr6_spt_lenslike"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank Qu, Fei Ge"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.21, <2",
    "scipy (>=1.13.1)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
